--- a/ionic-avaliacao1/src/app/home/home.page.html
+++ b/ionic-avaliacao1/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic-Avaliação1
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,8 +13,24 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item-group>
+          <ion-item-divider>
+            <ion-label>
+              <span>Nome</span>
+              <h5 style="font-size: 1.6rem;">Eduardo</h5>
+            </ion-label>
+          </ion-item-divider>
+          <ion-item-divider>
+            <ion-label>
+              <span>código de turma</span>
+              <h5 style="font-size: 1.6rem;">PAS23103|BG|M|ADS0301M</h5>
+            </ion-label>
+          </ion-item-divider>
+        </ion-item-group>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
