--- a/ionic-avaliacao1/src/app/home/home.page.html
+++ b/ionic-avaliacao1/src/app/home/home.page.html
@@ -20,17 +20,20 @@
           <ion-item-divider>
             <ion-label>
               <span>Nome</span>
-              <h5 style="font-size: 1.6rem;">Eduardo</h5>
+              <h5 style="font-size: 1.3rem;">Eduardo</h5>
             </ion-label>
           </ion-item-divider>
           <ion-item-divider>
             <ion-label>
               <span>código de turma</span>
-              <h5 style="font-size: 1.6rem;">PAS23103|BG|M|ADS0301M</h5>
+              <h5 style="font-size: 1.3rem;">PAS23103|BG|M|ADS0301M</h5>
             </ion-label>
           </ion-item-divider>
         </ion-item-group>
       </ion-list>
+      <div>
+        <img style="width: 400px;" src="assets/imagem perfil virado.jpg" />
+      </div>
     </ion-card-content>
   </ion-card>
 </ion-content>
